@@ -1,0 +1,3 @@
+EXTRA_DIST = \
+	compile-iphoneOS.sh \
+	pureftpd.h
